fix: stretched image

--- a/css/style.css
+++ b/css/style.css
@@ -2134,6 +2134,7 @@ h6 {
 }
 img {
   max-width: 100%;
+  height: auto;
 }
 
 .calibreToc a {
